Changes for routing

--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -299,7 +299,9 @@
 <!-- Toolbar -->
 <div class="content" role="main">
   <app-nav></app-nav>
-  <app-home></app-home>
+  <router-outlet></router-outlet>
+
+   <!-- <app-home></app-home> -->
   
   <!-- Highlight Card -->
  
