--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -22,6 +22,10 @@
 
     <div *ngIf="loggedIn()" class="btn-group" dropdown container="body">
       <a class="dropdown-toggle text-light" dropdownToggle>
+        <span class="mr-1">
+          <!--<img src="{{authService.currentUser.photoUrl}}" alt="">-->
+          <img src="{{photoUrl}}" alt="">
+        </span>
         <!--Welcome user -->
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
