--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -13,7 +13,8 @@
   <div class="row">
     <div class="col-sm-4"> 
       <div class="card"> 
-        <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+        <!--<img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">-->
+        <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
@@ -56,13 +57,12 @@
                     <label for="city">City</label>
                     <input type="text" class="form-control" name="city" [(ngModel)]="user.city">
                     <label for="country">Country</label>
-                    <input type="text" class="form-control" name="city" [(ngModel)]="user.country">
+                    <input type="text" class="form-control" name="country" [(ngModel)]="user.country">
                   </div>
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <h4>Interests</h4>
-            <p>Photo edit will go here</p>
+            <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
         </tabset>
       </div>
