--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -3,6 +3,7 @@
     <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
   
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+    <!-- <ul class="navbar-nav mr-auto"> -->
       <li class="nav-item" routerLinkActive="active">
         <!--<a class="nav-link" href="#">Matches</a>-->
         <a class="nav-link" [routerLink]="['/members']">Matches</a>
@@ -21,10 +22,11 @@
     </ul>
 
     <div *ngIf="loggedIn()" class="btn-group" dropdown container="body">
+    <!-- <div class="btn-group" class="btn-group" dropdown container="body"> -->
       <a class="dropdown-toggle text-light" dropdownToggle>
         <span class="mr-1">
           <!--<img src="{{authService.currentUser.photoUrl}}" alt="">-->
-          <img src="{{photoUrl}}" alt="">
+          <img src="{{photoUrl || '../../assets/user.png'}}" alt="">
         </span>
         <!--Welcome user -->
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
@@ -38,6 +40,7 @@
     </div>
 
     <form #LoginForm="ngForm" *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+    <!-- <form #LoginForm="ngForm" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()"> -->
       <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required [(ngModel)]="model.username">
       <input class="form-control mr-sm-2" type="text" name="password" placeholder="Password" required [(ngModel)]="model.password">
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
